# no_weird_project

./: .gitignore  LICENSE  README.md  TESTING.md  TEST_MIGRATION_SUMMARY.md  pyproject.toml  pytest.ini  run_tests.py  test_runner_simple.py
.github/workflows/: tests.yml
metricFTW/: __init__.py  converter.py
noWeirdNumbersPls/: __init__.py  format_number.py
quanticTime/: __init__.py  core.py
tests/: test_improved_converter.py  test_notweird_mutable.py  test_properties.py  test_quantic_time.py  test_timezones.py  test_verification.py
