[tool.poetry]
name = "noWeirdUtils"
version = "0.1.0"
description = "Lightweight, fun named utilities for number formatting, unit conversions and unix time handling."
authors = ["Santiago Matta <santiagomatta@outlook.cl>"]
readme = "README.md"
classifiers = [
	"Programming Language :: Python :: 3",
	"Programming Language :: Python :: 3.8",
	"License :: OSI Approved :: MIT License",
	"Operating System :: OS Independent",
	"Development Status :: 4 - Beta",
	"Intended Audience :: Developers",
	"Topic :: Software Development :: Libraries :: Python Modules"
]

[tool.poetry.dependencies]
python = ">=3.8"
pytz = { version = "^2025.2", optional = true }
numpy = { version = "^1.25", optional = true }


[tool.poetry.extras]
timezone = ["pytz"]
fastmetric = ["numpy"]


[tool.poetry.dev-dependencies]
pytest = "^7.0"
pytest-cov = "^4.0"

[tool.poetry.group.test.dependencies]
pytest = "^7.0"
pytest-cov = "^4.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.0"
pytest-cov = "^4.0"

[tool.poetry.scripts]
test = "pytest"
test-cov = "pytest --cov=metricFTW --cov=noWeirdNumbersPls --cov=quanticTime --cov-report=html --cov-report=term"

# Test coverage settings
[tool.coverage.run]
source = ["metricFTW", "noWeirdNumbersPls", "quanticTime"]
omit = [
    "*/tests/*",
    "*/__pycache__/*",
    "*/venv/*",
    "setup.py",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if self.debug:",
    "if settings.DEBUG",
    "raise AssertionError",
    "raise NotImplementedError",
    "if 0:",
    "if __name__ == .__main__.:",
    "class .*\\bProtocol\\):",
    "@(abc\\.)?abstractmethod",
]


[tool.poetry.urls]
homepage = "https://github.com/santiago897/no_weird_project"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
